[package]
name = "model"
version = "0.1.2"
authors = ["Tyler Neely <t@jujit.su>"]
description = "model-based testing for data structures, with linearizability checking"
license = "MIT/Apache-2.0"
repository = "https://github.com/spacejam/model"
keywords = ["testing", "simulation", "deterministic", "model-checking"]
documentation = "https://docs.rs/model/"
edition = "2018"

[dependencies]
proptest = "0.8"
permutohedron = "0.2"
